// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="src-modules-entity-components-description__container"
>
  <div
    className="src-modules-entity-components-description__html"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Some description.",
      }
    }
  />
  <a
    className="src-modules-entity-components-description__link"
    rel="noopener"
    target="_blank"
  >
    Read more on Wikipedia
  </a>
</div>
`;

exports[`should render correctly when there is no wikipedia link 1`] = `
<div
  className="src-modules-entity-components-description__container"
>
  <div
    className="src-modules-entity-components-description__html"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Some description.",
      }
    }
  />
</div>
`;
